--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_john">Hello, John</string>
+    <string name="pizza_description">This is the traditional cheesy margheriita\n with cheesy tomato toppings</string>
 </resources>
